force-app/main/default/objects/ccrz__E_RelatedProduct__c/ccrz__E_RelatedProduct__c.object-meta.xml
<CustomObject>
    <description>Object used to hold product relationships.  These relationships tie various products together, used for cross-selling or up-selling.  Also used to associated similar products, accessories for a product, and other types of custom defined relationships between varying products within the application.  This typically are displayed on the product detail and shopping cart pages.</description>
    <label>CC Related Product</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>RelatedAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Related Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>