force-app/main/default/objects/ccrz__E_RelatedProduct__c/fields/ccrz__RelatedProduct__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RelatedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related product</description>
    <label>Related Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Related To (RelatedProductID)</relationshipLabel>
    <relationshipName>E_RelatedProducts1</relationshipName>
    <type>Lookup</type>
</CustomField>