force-app/main/default/objects/ccrz__E_RelatedProduct__c/fields/ccrz__RelatedProductId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RelatedProductId__c</fullName>
    <description>External reference Id</description>
    <externalId>true</externalId>
    <label>Related Product Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>