force-app/main/default/objects/ccrz__E_RelatedProduct__c/fields/ccrz__ShortDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDesc__c</fullName>
    <description>The short description of this relationship.</description>
    <label>ShortDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>