force-app/main/default/objects/ccrz__E_RelatedProduct__c/fields/ccrz__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The first date that this relationship will be available/active</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>