force-app/main/default/objects/ccrz__E_RelatedProduct__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>ccrz__RelatedProductType__c</columns>
    <columns>ccrz__Product__c</columns>
    <columns>ccrz__RelatedProduct__c</columns>
    <columns>ccrz__Sequence__c</columns>
    <columns>ccrz__Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>